fixed overflow bug

--- a/src/components/css/general/layout.css
+++ b/src/components/css/general/layout.css
@@ -2,6 +2,7 @@ html, body {
   height: 100vh;
   margin: 0;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
